[Programming Command Prompt] Fixed bug with z-index RFD #5844

--- a/addons/ProgrammingCommandPrompt/src/style.css
+++ b/addons/ProgrammingCommandPrompt/src/style.css
@@ -1,7 +1,13 @@
 .CommandPrompt-wrapper {
     width: 100%;
     height: 100%;
+
 }
+
+.CommandPrompt-wrapper :first-child {
+  opacity: .99;
+}
+
 .CommandPrompt-wrapper.editor {
     position: absolute;
     width: 100%;
